--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
+
+    <!-- Header Part -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -30,8 +32,22 @@
         </div>
     </header>
 
+    <!-- Main Part -->
     <main>
-
+        <!-- team-section-part -->
+        <section class="teams-section"> 
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"> <span id="ql">Quick list </span>  <span id="oo">of Our</span> <br> <span id="feat">Features</span> </h3>
+                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
 
     <footer>
