--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header Part -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
 
             <ul>
                 <li><a href="">Home</a></li>
@@ -25,7 +25,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1>Brand New<br>Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -44,9 +44,15 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-title"> <span id="ql">Quick list </span>  <span id="oo">of Our</span> <br> <span id="feat">Features</span> </h3>
-                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="teams-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+        </section>
+
+        <!-- Facts Section -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         </section>
     </main>
 
