--- a/index.html
+++ b/index.html
@@ -49,11 +49,52 @@
             </div>
         </section>
 
-        <!-- Facts Section -->
+        <!-- facts Section -->
         <section class="facts">
-            <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-header">
+                <h3 class="section-title">Some Facts</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            </div>
+        
+        <div class="facts-card-container">
+            <div class="card">
+                <img src="images/icons/ribon.png" alt="">
+                <h2 class="card-stats">54</h2>
+                <p class="card-title">Award Winning</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/projects.png" alt="">
+                <h2 class="card-stats">1458</h2>
+                <p class="card-title">Projects Finished</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/customers.png" alt="">
+                <h2 class="card-stats">590</h2>
+                <p class="card-title">Clients Worked</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/email.png" alt="">
+                <h2 class="card-stats">22578</h2>
+                <p class="card-title">Emails Sent</p>
+            </div>
+        </div>
         </section>
+
+        <!-- sponsors section -->
+         <section class="sponsors">
+            <div class="sponsors-header">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            </div>
+            
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+         </section>
     </main>
 
     <footer>
