--- a/index.html
+++ b/index.html
@@ -49,6 +49,40 @@
             </div>
         </section>
 
+        <!-- features section -->
+        <section class="features">
+            <div class="feature-content">
+                <div class="feature-header">
+                    <h3 class="section-title">Features you will <br> love & enjoy</h3>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form, by injected humour, or <br> randomised words which don't look even</p>
+                </div>
+            
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-year-badge">
+                    <h2>10+Year</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
+
         <!-- facts Section -->
         <section class="facts">
             <div class="facts-header">
@@ -86,7 +120,7 @@
                 <h3 class="section-title">Our Sponsors</h3>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
             </div>
-            
+
             <div class="sponsors-img-container">
                 <img src="images/sponsors/spotify.png" alt="">
                 <img src="images/sponsors/amazon.png" alt="">
@@ -96,9 +130,5 @@
             </div>
          </section>
     </main>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
